--- a/home/macKitty/aerospace.toml
+++ b/home/macKitty/aerospace.toml
@@ -1,6 +1,9 @@
 # Minimal AeroSpace config fragment – everything else falls back
 # to the built-in default-config.toml.:contentReference[oaicite:0]{index=0}
 
+[workspace]
+global = true
+
 [mode.main.binding]
 # Switch to workspace N with Cmd+N
 cmd-1 = "workspace 1"
@@ -12,6 +15,7 @@ cmd-6 = "workspace 6"
 cmd-7 = "workspace 7"
 cmd-8 = "workspace 8"
 cmd-9 = "workspace 9"
+cmd-0 = "workspace 10"
 
 # Move focused window to workspace N with Cmd+Shift+N
 cmd-shift-1 = "move-node-to-workspace 1"
@@ -23,3 +27,4 @@ cmd-shift-6 = "move-node-to-workspace 6"
 cmd-shift-7 = "move-node-to-workspace 7"
 cmd-shift-8 = "move-node-to-workspace 8"
 cmd-shift-9 = "move-node-to-workspace 9"
+cmd-shift-0 = "move-node-to-workspace 0"
