--- a/home/macKitty/aerospace.toml
+++ b/home/macKitty/aerospace.toml
@@ -1,10 +1,7 @@
 # Minimal AeroSpace config fragment – everything else falls back
 # to the built-in default-config.toml.:contentReference[oaicite:0]{index=0}
 
-[workspace]
-global = true
-
-[mode.main.binding]
+[keybindings]
 # Switch to workspace N with Cmd+N
 cmd-1 = "workspace 1"
 cmd-2 = "workspace 2"
