--- a/home/macKitty/aerospace.toml
+++ b/home/macKitty/aerospace.toml
@@ -1,7 +1,12 @@
 # Minimal AeroSpace config fragment – everything else falls back
 # to the built-in default-config.toml.:contentReference[oaicite:0]{index=0}
 
-[mode.global.binding]
+[mode.main.binding]
+
+persistent-workspaces = [
+  "0","1","2","3","4","5","6","7","8","9"
+]
+
 # Switch to workspace N with Cmd+N
 cmd-1 = "workspace 1"
 cmd-2 = "workspace 2"
