--- a/home/macKitty/aerospace.toml
+++ b/home/macKitty/aerospace.toml
@@ -1,32 +1,65 @@
-# Minimal AeroSpace config fragment – everything else falls back
-# to the built-in default-config.toml.:contentReference[oaicite:0]{index=0}
+# ~/.aerospace.toml
 
-[mode.main.binding]
+# Use the modern config format so we can use persistent-workspaces
+config-version = 2
 
+# Keep only workspaces "0"–"9" alive even when empty
 persistent-workspaces = [
-  "0","1","2","3","4","5","6","7","8","9"
+  "0", "1", "2", "3", "4", "5", "6", "7", "8", "9",
 ]
 
-# Switch to workspace N with Cmd+N
-cmd-1 = "workspace 1"
-cmd-2 = "workspace 2"
-cmd-3 = "workspace 3"
-cmd-4 = "workspace 4"
-cmd-5 = "workspace 5"
-cmd-6 = "workspace 6"
-cmd-7 = "workspace 7"
-cmd-8 = "workspace 8"
-cmd-9 = "workspace 9"
-cmd-0 = "workspace 10"
+# Keyboard layout; change if you use dvorak/colemak
+[key-mapping]
+preset = 'qwerty'
 
-# Move focused window to workspace N with Cmd+Shift+N
-cmd-shift-1 = "move-node-to-workspace 1"
-cmd-shift-2 = "move-node-to-workspace 2"
-cmd-shift-3 = "move-node-to-workspace 3"
-cmd-shift-4 = "move-node-to-workspace 4"
-cmd-shift-5 = "move-node-to-workspace 5"
-cmd-shift-6 = "move-node-to-workspace 6"
-cmd-shift-7 = "move-node-to-workspace 7"
-cmd-shift-8 = "move-node-to-workspace 8"
-cmd-shift-9 = "move-node-to-workspace 9"
-cmd-shift-0 = "move-node-to-workspace 0"
+# Main keybinding mode
+[mode.main.binding]
+  # Focus movement (vim-style)
+  alt-h = 'focus left'
+  alt-j = 'focus down'
+  alt-k = 'focus up'
+  alt-l = 'focus right'
+
+  # Move window within workspace
+  alt-shift-h = 'move left'
+  alt-shift-j = 'move down'
+  alt-shift-k = 'move up'
+  alt-shift-l = 'move right'
+
+  # Resize
+  alt-minus = 'resize smart -50'
+  alt-equal = 'resize smart +50'
+
+  # ----- WORKSPACES: 0–9 ONLY -----
+
+  # Jump to workspace N (wherever it currently is)
+  cmd-0 = 'workspace 0'
+  cmd-1 = 'workspace 1'
+  cmd-2 = 'workspace 2'
+  cmd-3 = 'workspace 3'
+  cmd-4 = 'workspace 4'
+  cmd-5 = 'workspace 5'
+  cmd-6 = 'workspace 6'
+  cmd-7 = 'workspace 7'
+  cmd-8 = 'workspace 8'
+  cmd-9 = 'workspace 9'
+
+  # Move window to workspace N *and follow it*
+  cmd-shift-0 = ['move-node-to-workspace 0', 'workspace 0']
+  cmd-shift-1 = ['move-node-to-workspace 1', 'workspace 1']
+  cmd-shift-2 = ['move-node-to-workspace 2', 'workspace 2']
+  cmd-shift-3 = ['move-node-to-workspace 3', 'workspace 3']
+  cmd-shift-4 = ['move-node-to-workspace 4', 'workspace 4']
+  cmd-shift-5 = ['move-node-to-workspace 5', 'workspace 5']
+  cmd-shift-6 = ['move-node-to-workspace 6', 'workspace 6']
+  cmd-shift-7 = ['move-node-to-workspace 7', 'workspace 7']
+  cmd-shift-8 = ['move-node-to-workspace 8', 'workspace 8']
+  cmd-shift-9 = ['move-node-to-workspace 9', 'workspace 9']
+
+  # Toggle between current & last workspace
+  alt-tab = 'workspace-back-and-forth'
+
+  # Move the *current workspace* to the other monitor
+  cmd-alt-right = 'move-workspace-to-monitor --wrap-around next'
+  cmd-alt-left  = 'move-workspace-to-monitor --wrap-around prev'
+
