making certs configurable

--- a/hosts/linode/infra/nginx/nginx.conf
+++ b/hosts/linode/infra/nginx/nginx.conf
@@ -1,4 +1,6 @@
-user  nobody;
+## ubuntu user www-data or other distro user nobody
+user  www-data;
+# user nobody;
 worker_processes auto;
 
 error_log  /var/log/nginx/error.log warn;
