--- a/hosts/linode/infra/nginx/sites-enabled/forgejo-https.conf
+++ b/hosts/linode/infra/nginx/sites-enabled/forgejo-https.conf
@@ -1,17 +1,4 @@
-# HTTP -> HTTPS redirect + ACME challenge
-server {
-  listen 80;
-  server_name git.example.com;
-
-  location /.well-known/acme-challenge/ {
-    root /var/lib/nginx/acme;
-  }
-
-  location / {
-    return 301 https://$host$request_uri;
-  }
-}
-
+# Forgejo HTTPS (enable only after cert exists)
 server {
   listen 443 ssl;
   http2 on;
@@ -20,12 +7,10 @@ server {
   ssl_certificate     /etc/letsencrypt/live/git.example.com/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/git.example.com/privkey.pem;
 
-  # Reasonable TLS settings (keep it simple; you can harden later)
   ssl_session_timeout 1d;
   ssl_session_cache shared:SSL:10m;
   ssl_session_tickets off;
 
-  # Proxy to Forgejo
   location / {
     proxy_pass http://127.0.0.1:3000;
 
