setting http as fallback but with warnings

--- a/hosts/linode/infra/nginx/sites-enabled/forgejo-http.conf
+++ b/hosts/linode/infra/nginx/sites-enabled/forgejo-http.conf
@@ -1,13 +1,15 @@
 # Forgejo bootstrap (HTTP) + ACME challenge
 server {
   listen 80;
-  server_name git.example.com;
+  server_name @FORGEJO_DOMAIN@;
 
   location /.well-known/acme-challenge/ {
     root /var/lib/nginx/acme;
   }
 
-  # Until HTTPS is enabled, serve Forgejo over HTTP
+  # Until HTTPS is enabled, serve Forgejo over HTTP (bootstrap)
+  add_header X-TLS-Status "disabled" always;
+
   location / {
     proxy_pass http://127.0.0.1:3000;
 
