--- a/hosts/linode/infra/nginx/sites-enabled/forgejo-https.conf
+++ b/hosts/linode/infra/nginx/sites-enabled/forgejo-https.conf
@@ -2,10 +2,10 @@
 server {
   listen 443 ssl;
   http2 on;
-  server_name git.example.com;
+  server_name @FORGEJO_DOMAIN@;
 
-  ssl_certificate     /etc/letsencrypt/live/git.example.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/git.example.com/privkey.pem;
+  ssl_certificate     /etc/letsencrypt/live/@FORGEJO_DOMAIN@/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/@FORGEJO_DOMAIN@/privkey.pem;
 
   ssl_session_timeout 1d;
   ssl_session_cache shared:SSL:10m;
@@ -23,4 +23,3 @@ server {
     proxy_connect_timeout 60;
   }
 }
-
