updated run deploy-forgejo

--- a/hosts/linode/infra/forgejo/app.ini
+++ b/hosts/linode/infra/forgejo/app.ini
@@ -2,11 +2,11 @@
 PROTOCOL = http
 HTTP_ADDR = 127.0.0.1
 HTTP_PORT = 3000
-DOMAIN = git.example.com
-ROOT_URL = https://git.example.com/
+DOMAIN = @FORGEJO_DOMAIN@
+ROOT_URL = https://@FORGEJO_DOMAIN@/
 
 START_SSH_SERVER = true
-SSH_DOMAIN = git.example.com
+SSH_DOMAIN = @FORGEJO_DOMAIN@
 SSH_PORT = 2222
 SSH_LISTEN_PORT = 2222
 
