adding extra config fields and blocking the saving from the ui

--- a/hosts/linode/infra/forgejo/app.ini
+++ b/hosts/linode/infra/forgejo/app.ini
@@ -18,3 +18,12 @@ PATH = /var/lib/forgejo/data/forgejo.db
 [repository]
 ROOT = /var/lib/forgejo/git/repositories
 
+[security]
+INSTALL_LOCK = true
+
+[service]
+DISABLE_REGISTRATION = true
+REQUIRE_SIGNIN_VIEW = true
+
+[log]
+ROOT_PATH = /var/lib/forgejo/data/log
