updated to have deploy all with cert generation

--- a/hosts/linode/infra/forgejo/app.ini
+++ b/hosts/linode/infra/forgejo/app.ini
@@ -18,12 +18,24 @@ PATH = /var/lib/forgejo/data/forgejo.db
 [repository]
 ROOT = /var/lib/forgejo/git/repositories
 
-[security]
-INSTALL_LOCK = true
-
 [service]
 DISABLE_REGISTRATION = true
 REQUIRE_SIGNIN_VIEW = true
 
+[actions]
+ENABLED = false
+
+[lfs]
+START_SERVER = false
+
+[security]
+INSTALL_LOCK = true
+INTERNAL_TOKEN = @INTERNAL_TOKEN@
+SECRET_KEY = @SECRET_KEY@
+
+[oauth2]
+JWT_SECRET = @OAUTH2_JWT_SECRET@
+
 [log]
 ROOT_PATH = /var/lib/forgejo/data/log
+
