--- a/hosts/linode/infra/forgejo/forgejo.service
+++ b/hosts/linode/infra/forgejo/forgejo.service
@@ -7,7 +7,7 @@ Type=simple
 User=forgejo
 Group=forgejo
 WorkingDirectory=/var/lib/forgejo
-ExecStart=@FORGEJO_BIN@ web --config /etc/forgejo/app.ini
+ExecStart=@FORGEJO_BIN@ web --config /var/lib/forgejo/custom/conf/app.ini
 Restart=always
 RestartSec=3
 NoNewPrivileges=true
