--- a/hosts/linode/infra/nginx/sites-enabled/forgejo-http.conf
+++ b/hosts/linode/infra/nginx/sites-enabled/forgejo-http.conf
@@ -1,4 +1,4 @@
-# Forgejo bootstrap (HTTP) + ACME challenge
+# Forgejo bootstrap (HTTP) + ACME challenge + redirect
 server {
   listen 80;
   server_name @FORGEJO_DOMAIN@;
@@ -7,19 +7,9 @@ server {
     root /var/lib/nginx/acme;
   }
 
-  # Until HTTPS is enabled, serve Forgejo over HTTP (bootstrap)
-  add_header X-TLS-Status "disabled" always;
-
+  # No HTTP service. Force HTTPS for everything except ACME challenge.
   location / {
-    proxy_pass http://127.0.0.1:3000;
-
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-
-    proxy_read_timeout 300;
-    proxy_connect_timeout 60;
+    return 301 https://$host$request_uri;
   }
 }
 
