allowing mirrors on forgejo

--- a/hosts/linode/infra/forgejo/app.ini
+++ b/hosts/linode/infra/forgejo/app.ini
@@ -39,3 +39,8 @@ JWT_SECRET = @OAUTH2_JWT_SECRET@
 [log]
 ROOT_PATH = /var/lib/forgejo/data/log
 
+[mirror]
+ENABLED = true
+DISABLE_NEW_PUSH = false
+DISABLE_NEW_PULL = false
+
